--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
           <img src="img/Adopt a pup.jfif" alt="Adopt a pup" class="img-fluid w-100">
         </div>
         <div class="col-md-6">
-          <p>
+          <p class="pup">
             Adopting a puppy is a heartwarming and rewarding experience that brings joy, companionship, and unconditional love into your life. When you choose to adopt, you're not only giving a young dog a second chance at a happy home, but you're also helping to reduce the number of animals in shelters. Puppies are full of energy, curiosity, and affection, and they quickly become beloved members of the family. While raising a puppy comes with responsibilities—such as training, socializing, and regular veterinary care—the bond that forms is incredibly fulfilling. Adoption is a meaningful way to make a difference, one paw at a time.
           </p>
         </div>
