--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Cute Puppies</a>
+        <a class="navbar-brand" href="index.html"> Adopt Me</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -39,9 +39,16 @@
           <img src="img/Adopt a pup.jfif" alt="Adopt a pup" class="img-fluid w-100">
         </div>
         <div class="col-md-6">
+          <h1>Hello, my name is Ashley and im the current owner of "Adopt Me". Here you can choose any dog breed you want, you're basically saving a dogs life. </h1>
           <p class="pup">
             Adopting a puppy is a heartwarming and rewarding experience that brings joy, companionship, and unconditional love into your life. When you choose to adopt, you're not only giving a young dog a second chance at a happy home, but you're also helping to reduce the number of animals in shelters. Puppies are full of energy, curiosity, and affection, and they quickly become beloved members of the family. While raising a puppy comes with responsibilities—such as training, socializing, and regular veterinary care—the bond that forms is incredibly fulfilling. Adoption is a meaningful way to make a difference, one paw at a time.
           </p>
         </div>
       </div>
+    </div>
+    <footer>
+    <div class="container">
+      <p class="text-center">© 2025 Ashley |
+        <a href="https://ashleyr143.github.io/Coding-1-Final/">View On Github</a>
+      </p>
     </div>
