--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Cute Puppies</a>
+        <a class="navbar-brand" href="index.html">Adopt Me</a>
         
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -106,8 +106,8 @@
   </body>
   <footer>
     <div class="container">
-      <p class="text-center">© 2023 Cute Puppies.
-        <a href=""
+      <p class="text-center">© 2025 Ashley |
+        <a href="https://ashleyr143.github.io/Coding-1-Final/">View On Github</a>
       </p>
     </div>
 </html>
