--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Cute Puppies</a>
+        <a class="navbar-brand" href="index.html">Adopt Me</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,6 +31,12 @@
         </div>
       </div>
     </nav>
-    <img src="img/Contact us.png" alt="Contaxt us" class="img-fluid w-50">
+    <img src="img/Contact us.png" alt="Contact us" class="card-img-top d-block mx-auto w-50">
+    <h4>If you have any questions about our website, We will gladly love to answer you're questions!🐶</h4>
+    <br>
     <h3>We'd love to hear from you!</h3>
-    <h2></h2>
+    <br>
+    <h2>Phone: 731-616-3922</h2>
+
+    <h2>Email:Ashley.diaz@students.jmcss.org</h2>
+    <h2>location:Jackson, TN</h2>
